--- a/mysite/index.html
+++ b/mysite/index.html
@@ -40,17 +40,15 @@
                 <p>문서 구조가 명확하면 스타일과 동작을 더 쉽게 얹을 수 있다.</p>
             </article>
         </section>
-        <section id="C">
-        <aside>
-            <h2>연락처</h2>
-            <ul>
-                <span style="font-style: italic"><a href="https://developer.mozilla.org/ko/">cakesopdj@gmail.com</a>
-            </ul>
-        </aside>
-        </section>
     </main>
-    <footer id="contact">
-    <small>&copy; 2025 윤혜리이다</small>
-  </footer>
+    <section id="C">
+        <footer id="contact">
+            <h2>연락처</h2>
+            <address>
+                <span style="font-style: italic"><a href="mailto:hello@example.com">hello@example.com</a>
+            </address>
+        <small>&copy; 2025 윤혜리이다</small>
+        </footer>
+    </section>
 </body>
 </html>
