--- a/css/ex01_css.html
+++ b/css/ex01_css.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
     <style>
+        @import "index.css";
+
         /* 현재 페이지에 있는 모든 해당하는 태그에 적용 */
+
         p {color : blue}
+
     </style>
+    <!-- 외부 스타일 시트 연결하기 -->
+     <link rel="stylesheet" href="style.css">
+     
 </head>
 <body>
     <!-- 인라인 스타일 적용 방식
@@ -17,5 +24,6 @@
     <p>스타일 연습중1</p>
     <p>스타일 연습중2</p>
     <p>스타일 연습중3</p>
+    <h1>import 방식의 스타일 적용</h1>
 </body>
 </html>
