--- a/css/ex02_class.html
+++ b/css/ex02_class.html
@@ -6,15 +6,18 @@
     <title>Document</title>
     <style>
         /* 클래스 선택자
-        같은 스타일을 주고 싶은 요소를 묶는 방법 */
+        같은 스타일을 주고 싶은 요소를 묶는 방법
+        클래스 이름은 역할 기반으로 짓는 게 좋다. */
         .red {color : red;}
+        .fontSize {font-size : 32px;}
     </style>
 </head>
 <body>
     <h1>클래스 선택자를 이용한 스타일 적용</h1>
     <h2 class="red">이 부분에 스타일을 적용합니다</h2>
     <p class="red">클래스 선택자를 이용하여 스타일을 적용할 HTML요소돌을 한 번에 선택할 수 있습니다.</p>
-    <h3>이 부분에도 스타일을 적용합니다.</h3>
+    <!-- 2개 이상의 클래스를 적용 시킬 수 있다. -->
+    <h3 class="red fontSize">이 부분에도 스타일을 적용합니다.</h3>
     <h3>이 부분에도 스타일을 적용합니다.</h3>
 </body>
 </html>
