--- a/css/ex05_border.html
+++ b/css/ex05_border.html
@@ -25,6 +25,8 @@
                 border-left : lime 20px dotted;     /*글자 왼쪽*/
                 border-right : tan dashed 5px;      /*글자 오른쪽*/
                 border-bottom : groove cyan 2px }   /*글자 밑*/
+
+        .div3 { border : 3px solid black;   }
     </style>
 </head>
 <body>
