--- a/css/ex12.code-your-future.html
+++ b/css/ex12.code-your-future.html
@@ -9,7 +9,7 @@
     body{
         background: linear-gradient(to right, #74ebd5, #acb6e5);
         color: #333;
-        font-family: "Verdana", "sans-serif";
+        font-family: "Verdana", sans-serif;
     }
     h1{
         text-align: center ;
