--- a/css/ex26_flex-direction.html
+++ b/css/ex26_flex-direction.html
@@ -11,22 +11,22 @@
             margin-bottom: 20px;
         }
 
-        /* 가로 배치 */
+        /* 좌에서 우로 수평 배치된다 */
         .row{
             flex-direction: row;
         }
 
-        /* 가로 역방향 배치 */
+        /* 우에서 좌로 수평 배치된다. */
         .row-reverse{
             flex-direction: row-reverse;
         }
 
-        /* 세로 배치 */
+        /* 위에서 아래로 수직 배치된다. */
         .column{
             flex-direction: column;
         }
 
-        /* 세로 역방향 배치 */
+        /* 아래서 위로 수직 배치된다. */
         .column-reverse{
             flex-direction: column-reverse;
         }
