--- a/css/ex31_order.html
+++ b/css/ex31_order.html
@@ -3,31 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>order</title>
+    <title>Document</title>
     <link href="box.css" rel="stylesheet">
     <style>
-        .comtainer{
-            display: flex;
-            border: 2px dashed black; }
+        .container{
+            display:flex;
+            border : 2px dashed black;
+        }
 
-            
+        .o1{
+            order : 1;
+        }
+
+        .o2{
+            order:2;
+        }
+
+        .o3{
+            order:3;
+        }
+
+        .o4{
+            order:4;
+        }
     </style>
 </head>
 <body>
     <h2>기본 순서</h2>
     <div class="container">
-        <div class="box a">a</div>
-        <div class="box b">b</div>
-        <div class="box c">c</div>
-        <div class="box d">d</div>
+        <div class="box a">A</div>
+        <div class="box b">B</div>
+        <div class="box c">C</div>
+        <div class="box d">D</div>
     </div>
 
-    <h2>order 재배치</h2>
+    <h2>order로 재배치</h2>
     <div class="container">
-        <div class="box a o4">a</div>
-        <div class="box b o3">b</div>
-        <div class="box c o1">c</div>
-        <div class="box d o2">d</div>
+        <div class="box a o4">A</div>
+        <div class="box b o3">B</div>
+        <div class="box c o1">C</div>
+        <div class="box d o2">D</div>
     </div>
 </body>
 </html>
