--- a/css/ex32_flex-grow.html
+++ b/css/ex32_flex-grow.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flex-grow</title>
+   
+    <!-- flex-grow
+        남는 공간을 자식 요소들이 얼마나 '더'가져갈지 비율로 정하는 속성
+        기본값이 0 -> 남는 공간을 추가로 가져가지 않는다.
+        1이상이면 남는 공간을 비율대로 나눠 가진다. -->
+
     <style>
         .container{
             display: flex;
