--- a/css/ex50_delay.html
+++ b/css/ex50_delay.html
@@ -21,16 +21,17 @@
             border: none;
             border-radius: 8px;
             cursor: pointer;
-            transition-property: background-color, transform;
+            /*transition-property: background-color, transform;
             transition-duration: 0.4s;
-            transition-delay: 0.5s;
+            transition-delay: 0.5s;*/
+            transition: background-color 0.4s 0.5s, transform 0.4s 0.5s; /*축약 속성*/
         }
 
         .btn:hover{
             background-color: #1e40af;
             transform: scale(1.1);
         }
-        
+
     </style>
 </head>
 <body>
