--- a/css/ex52_box-hover.html
+++ b/css/ex52_box-hover.html
@@ -33,7 +33,7 @@
         }
 
         .card:hover{
-            transform: translateY(-10px);
+            transform: translateY(-10px); /* -를 해야 위로 올라감. */
             box-shadow: 0 10px 30px rgba(241, 45, 45, 0.12);
         }
     </style>
