--- a/css/ex55_steps.html
+++ b/css/ex55_steps.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>steps</title>
+    <style>
+        body{
+            padding: 40px;
+            margin: 0;
+            background: #f7f8fa;
+        }
+
+        @keyframes hop{
+            /* form과 to를 이용하여 x 좌표가 80px 이동하도록 설정 */
+            form{
+                transform: translateX(0);
+            }
+
+            to{
+                transform: translateX(80px);
+            }
+        }
+        /* steps(프레임,start or end) */
+
+        .badge{
+            display: inline-block;
+            padding: 10px 14px;
+            background: #8e44ad;
+            color: white;
+            border-radius: 9999px;
+            font-weight: 700;
+            animation: hop 800ms steps(100,end) infinite alternate;
+        }
+    </style>
 </head>
 <body>
-    
+    <span class="badge">STEP</span>
 </body>
 </html>
