--- a/css/mini_project.html
+++ b/css/mini_project.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>Mouse Book</title>
 <style>
     body {
         margin: 0;
         font-family: "Noto Sans KR", sans-serif;
-        background-color: #fff;
+        background-color: #f9f9f9;
         color: #333;
-    }
-
-    a {
-        text-decoration: none;
-        color: #333;
-        transition: all 0.3s ease;
-    }
-
-    a:hover {
-        color: #00d974;
+        display: flex;
+        justify-content: center;
     }
 
     .container {
@@ -33,15 +25,27 @@
         grid-template-columns: 1fr;
         grid-template-rows: auto auto 1fr auto;
         min-height: 100vh;
+        width: 100%;
+        max-width: 1200px; 
+        box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+
+    a {
+        text-decoration: none;
+        color: #333;
+        transition: all 0.3s ease;
+    }
+
+    a:hover {
+        color: #588157;
     }
 
     header {
         grid-area: header;
         display: flex;
-        justify-content: space-between;
         align-items: center;
         background-color: #ffffff;
-        padding: 10px 20px;
+        padding: 10px 30px;
         border-bottom: 2px solid #eee;
     }
 
@@ -51,9 +55,19 @@
         color: #333;
     }
 
+    header .logo {
+        width: 40px;  
+        height: 40px;
+        object-fit: contain; 
+    }
+
     header h1:hover {
-        color: #04b82b; 
+        color: #588157; 
         transition: color 0.3s ease; 
+    }
+
+    .user-menu {
+    margin-left: auto; 
     }
 
     .user-menu a {
@@ -80,7 +94,7 @@
     }
 
     .main-menu a:hover {
-        background-color: #089e14;
+        background-color: #588157;
         color: white;
     }
 
@@ -89,30 +103,37 @@
         display: grid;
         grid-template-areas: "ad hero";
         grid-template-columns: 7fr 3fr;
-        gap: 10px;
-        padding: 20px;
+        gap: 20px;
+        padding: 30px;
+        align-items: stretch;
+        box-sizing: border-box;
     }
 
     /* 광고 슬라이드 영역 */
     .ad-area {
         grid-area: ad;
-        position: relative;
+        width: 100%;
+        height: 100%;
         overflow: hidden;
         border-radius: 8px;
-        aspect-ratio: 16 0;
+        position: relative;
     }
 
     .ad-slide {
-        position: absolute;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 8px;
         opacity: 0;
-        transition: opacity 0.5s ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: opacity 1s ease-in-out; 
     }
 
     .ad-slide.active {
         opacity: 1;
+        position: relative;
     }
 
     /* 인디케이터 */
@@ -125,7 +146,7 @@
         gap: 8px;
     }
 
-    .ad-dots div {
+    .ad-dots .dot {
         width: 10px;
         height: 10px;
         border-radius: 50%;
@@ -133,36 +154,42 @@
         transition: background-color 0.3s;
     }
 
-    .ad-dots .active {
+    .ad-dots .dot.active {
         background-color: white;
     }
 
     .hero-area {
         grid-area: hero;
-        aspect-ratio: 16 / 20;
+        width: 100%;
+        aspect-ratio: 3 / 4;
         overflow: hidden;
+        border-radius: 8px;
+        background-color: #f4f4f4;
+        position: relative;
     }
 
     .hero-image {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        overflow: hidden;
+        object-fit : cover;
         border-radius: 8px;
     }
 
     hr {
         border: none;
         border-top: 2px solid #ccc;
-        margin: 20px 0 0 0;
+        margin: 0;
     }
 
     footer {
         grid-area: footer;
         text-align: center;
-        padding: 15px;
+        padding: 20px;
         background-color: #ffffff;
         font-size: 0.9rem;
         color: #666;
+        border-top: 1px solid #ddd;
     }
 
     footer .footer-links {
@@ -177,71 +204,68 @@
     }
 
     footer .footer-links a:hover {
-        color: #168a1b;
+        color: #588157;
     }
 
+    /* 태블릿 */
     @media (max-width: 1024px) {
         main {
             grid-template-columns: 6fr 4fr;
+            padding: 20px;
         }
     }
 
     /* 모바일 */
     @media (max-width: 768px) {
-    header {
-      flex-direction: column;
-      align-items: flex-start;
+        header {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .main-menu {
+            grid-template-columns: 1fr 1fr;
+            grid-auto-rows: 50px;
+        }
+
+        main {
+            display: grid;
+            grid-template-areas:
+                "ad"
+                "hero";
+            grid-template-columns: 1fr;
+            grid-template-rows: 70% 30%;
+            height: auto;
+            gap: 15px;
+            padding: 20px;
+        }
+
+        .ad-area, .hero-area {
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .hero-area{
+            aspect-ratio: 1 / 1;   
+        }
     }
-
-    .main-menu {
-      grid-template-columns: 1fr 1fr;
-      grid-auto-rows: 50px;
-    }
-
-    /* 고정형 세로 비율 구조 */
-    main {
-      display: grid;
-      grid-template-areas:
-          "ad"
-          "hero";
-      grid-template-columns: 1fr;
-      grid-template-rows: 70% 30%; 
-      height: 500px; 
-      gap: 10px;
-      padding: 15px;
-    }
-
-    .ad-area, .hero-area {
-      width: 100%;
-      height: 100%;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-
-    .ad-slide, .hero-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-    }
-
-
-
 </style>
 </head>
 <body>
+<div class="container">
     <header>
         <h1>Mouse Book</h1>
+        <img src="/images/쥐.png" alt="Mouse Book Logo" class="logo">
         <nav class="user-menu">
             <a href="login.html">로그인</a>
-            <a href="#">회원가입</a>
+            <a href="signup-loading.html">회원가입</a>
             <a href="#">고객센터</a>
         </nav>
     </header>
 
     <nav class="main-menu">
-        <a href="#">베스트셀러</a>
+        <a href="bestseller.html">베스트셀러</a>
         <a href="#">신간도서</a>
         <a href="#">추천도서</a>
         <a href="#">이벤트</a>
@@ -251,11 +275,10 @@
     <main>
         <!-- 광고 슬라이드 -->
         <section class="ad-area">
-            <img src="/imges/흠3.png" class="ad-slide active" alt="광고1">
-            <img src="/imges/흠.png" class="ad-slide" alt="광고2">
-            <img src="/imges/흠2.png" class="ad-slide" alt="광고3">
+            <img src="/images/지구끝.png" class="ad-slide active" alt="광고1">
+            <img src="/images/작별.png" class="ad-slide" alt="광고2">
+            <img src="/images/모우어.png" class="ad-slide" alt="광고3">
 
-            <!-- 인디케이터 -->
             <div class="ad-dots">
                 <div class="dot active"></div>
                 <div class="dot"></div>
@@ -265,7 +288,8 @@
 
         <!-- Hero 이미지 -->
         <section class="hero-area">
-            <img src="https://img.khan.co.kr/news/2024/10/14/news-p.v1.20241014.e490d98acf854afb858d1bce6454e2a1.jpg" alt="추천 도서 이미지" class="hero-image">
+            <img src="/images/말.png" 
+                 alt="추천 도서 이미지" class="hero-image">
         </section>
     </main>
 
@@ -273,14 +297,17 @@
     <footer>
         <p>© Little Mouse.</p>
         <div class="footer-links">
-        <a href="#">회사소개</a> |
-        <a href="#">이용약관</a> |
-        <a href="#">개인정보처리방침</a> |
-        <a href="#">고객센터</a>
-    </div>
+            <a href="#">회사소개</a> |
+            <a href="#">이용약관</a> |
+            <a href="#">개인정보처리방침</a> |
+            <a href="#">고객센터</a>
+        </div>
     </footer>
+</div>
 
+<!-- 스크립트 전환 -->
 <script>
+    document.addEventListener('DOMContentLoaded', () => {
     const slides = document.querySelectorAll('.ad-slide');
     const dots = document.querySelectorAll('.ad-dots .dot');
     let current = 0;
@@ -291,7 +318,9 @@
         current = (current + 1) % slides.length;
         slides[current].classList.add('active');
         dots[current].classList.add('active');
-    }, 3000);
+    }, 4000);
+});
+</script>
 
 </script>
 </body>
