--- a/css/login.html
+++ b/css/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
@@ -43,13 +43,13 @@
 
     input:focus {
         outline: none;
-        border-color: #15b815;
+        border-color: #588157;
     }
 
     button {
         width: 100%;
         padding: 12px;
-        background-color: #36d316;
+        background-color: #588157;
         color: white;
         border: none;
         border-radius: 6px;
@@ -60,7 +60,7 @@
     }
 
     button:hover {
-        background-color: #0f7a15;
+        background-color: #3A5A40;
     }
 
     .login-links {
@@ -86,7 +86,7 @@
     }
 
     .back-home:hover {
-        color: #21992b;
+        color: #3A5A40;
     }
 </style>
 </head>
@@ -99,7 +99,7 @@
             <button type="submit">로그인</button>
         </form>
         <div class="login-links">
-            <a href="#">회원가입</a> | <a href="#">비밀번호 찾기</a>
+            <a href="/signup-loading.html">회원가입</a> | <a href="#">비밀번호 찾기</a>
         </div>
         <a href="mini_project.html" class="back-home">← 메인으로 돌아가기</a>
     </div>
