--- a/css/mini_project.html
+++ b/css/mini_project.html
@@ -161,19 +161,72 @@
     .hero-area {
         grid-area: hero;
         width: 100%;
-        aspect-ratio: 3 / 4;
-        overflow: hidden;
         border-radius: 8px;
-        background-color: #f4f4f4;
-        position: relative;
+        background: #ffffff;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .hero-image {
+    .book-card {
         width: 100%;
-        height: 100%;
-        overflow: hidden;
-        object-fit : cover;
+        max-width: 260px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .book-cover {
+        width: 100%;
         border-radius: 8px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .book-info {
+        margin-top: 15px;
+    }
+
+    .book-title {
+        margin: 0;
+        font-size: 1.3rem;
+        font-weight: 700;
+        color: #333;
+    }
+
+    .book-author {
+        margin: 4px 0;
+        font-size: 0.9rem;
+        color: #666;
+    }
+
+    .book-desc {
+        margin: 10px 0;
+        font-size: 0.85rem;
+        color: #555;
+    }
+
+    .book-price {
+        font-weight: 600;
+        color: #588157;
+        margin-top: 5px;
+    }
+
+    .book-btn {
+        margin-top: 15px;
+        padding: 10px 15px;
+        background: #588157;
+        color: white;
+        border-radius: 6px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        display: inline-block;
+        transition: background 0.3s;
+    }
+
+    .book-btn:hover {
+        background: #476747;
     }
 
     hr {
@@ -217,38 +270,44 @@
 
     /* 모바일 */
     @media (max-width: 768px) {
-        header {
-            flex-direction: column;
-            align-items: flex-start;
-        }
 
-        .main-menu {
-            grid-template-columns: 1fr 1fr;
-            grid-auto-rows: 50px;
-        }
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-        main {
-            display: grid;
-            grid-template-areas:
-                "ad"
-                "hero";
-            grid-template-columns: 1fr;
-            grid-template-rows: 70% 30%;
-            height: auto;
-            gap: 15px;
-            padding: 20px;
-        }
+    .main-menu {
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 50px;
+    }
 
-        .ad-area, .hero-area {
-            width: 100%;
-            height: 100%;
-            border-radius: 8px;
-            overflow: hidden;
-        }
+    main {
+        display: grid;
+        grid-template-areas:
+            "ad"
+            "hero";
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto; 
+        gap: 15px;
+        padding: 20px;
+    }
 
-        .hero-area{
-            aspect-ratio: 1 / 1;   
-        }
+    .ad-area, 
+    .hero-area {
+        width: 100%;
+        height: auto;         
+        border-radius: 8px;
+        overflow: visible;    
+    }
+
+    .hero-area {
+        padding: 15px;         
+        aspect-ratio: auto;    
+    }
+
+    .book-card {
+        max-width: 280px;    
+    }
     }
 </style>
 </head>
@@ -286,11 +345,20 @@
             </div>
         </section>
 
-        <!-- Hero 이미지 -->
         <section class="hero-area">
-            <img src="/images/말.png" 
-                 alt="추천 도서 이미지" class="hero-image">
-        </section>
+    <div class="book-card">
+        <img src="/images/말.png" alt="추천 도서 표지" class="book-cover">
+
+        <div class="book-info">
+            <h2 class="book-title">말의 형태</h2>
+            <p class="book-author">조해진</p>
+            <p class="book-desc">흩어진 감정과 기억을 더듬어 나아가는 이야기.</p>
+            <p class="book-price">₩13,000</p>
+        </div>
+
+        <a href="#" class="book-btn">자세히 보기</a>
+    </div>
+</section>
     </main>
 
     <hr>
