--- a/js/operator5.html
+++ b/js/operator5.html
@@ -42,6 +42,24 @@
         // OR : 앞이 true면 뒤는 실행하지 않는다.
         let result2 = x > y || (x+=1) > y; // true
         console.log(result2);
+
+        // 피연산자가 boolean이 아닐 때
+        // 자바스크립트에서는 true/false 이외의 값도
+        // Truthy / falsy 로 판단한다.
+        // 0, '', null, undefined, NaN -> false로 취급한다.
+
+        let l1 = 0;
+        let l2 = "Hello";
+        
+        // 앞의 값이 falsy이면 뒤의 값을 반환한다.  
+        let result3 = l1 || l2; // "Hello"
+        console.log(`result3 : ${result3}`);
+
+        // 앞의 값이 truthy면 뒤의 값을 반환한다.
+        let result4 = l2 && l1;
+        console.log(`result4 : ${result4}`);
+
+
     </script>
 </body>
 </html>
