--- a/js/if.html
+++ b/js/if.html
@@ -68,6 +68,38 @@
         } else {
             console.log(`${num}은 홀수다`);
         }
+
+        // 특정 배수 찾기
+        // 특정 값으로 나눠 나머지가 0이면 배수임을 알 수 있다.
+        num = 15;
+        if(num % 3 === 0){
+            console.log(`${num}은 3의 배수이다.`);
+        }
+
+        if(num % 5 === 0){
+            console.log(`${num}은 5의 배수이다.`);
+        }
+
+        // 범위 판별하기
+        // 두 조건을 &&로 연결하는 패턴
+        age = 25;
+        // 25살이 20대인지 판별하여 "20대입니다"라고 출력하기
+        if (age >= 20 && age <= 29){
+            console.log("20대 입니다.");
+        } else {
+            console.log("20대가 아닙니다.");
+        }
+
+        // 특정 문자 포함 여부
+        // 문자열.includes() 메서드를 사용하여 포함되어있는지 확인한다.
+
+        let email = "hello@gmail.com";
+
+        if (email.includes("@")) {
+            console.log("올바른 이메일 형식이다");
+        }
+
+        
     </script>
 </body>
 </html>
