--- a/js/switch.html
+++ b/js/switch.html
@@ -43,8 +43,9 @@
                 break;
             case false:
                 console.log("false 선택");
+                break;
         }
-        
+
     </script>
 </body>
 </html>
