--- a/js/exam3.html
+++ b/js/exam3.html
@@ -105,6 +105,23 @@
         } else {
             console.log("좋은 밤입니다.")
         }
+
+        // year 변수에 연도를 하나 대입한다.
+        // 해당 년도가 윤년인지 아닌지를 판별하는 코드 작성하기
+
+        // 4의 배수이면서 100의 배수가 아니면 된다.
+        // 400의 배수이면 윤년이다.
+
+        // 윤년이면 -> 윤년입니다.
+        // 아니면 평년입니다. 라고 출력하기
+
+        let year = 2025;
+
+        if ((year % 4 === 0 && year % 100 !== 0) || year % 400 === 0){
+            console.log(`${year}년은 윤년입니다.`);
+        }   else{
+            console.log(`${year}년은 평년입니다.`);
+        }
     </script>
 </body>
 </html>
