--- a/js/for.html
+++ b/js/for.html
@@ -15,6 +15,33 @@
         for(let i = 5; i > 0; i--){
             console.log(i);
         }
+
+        // body에 태그르 만드는 것도 가능하다.
+        for(let i = 6; i >= 1; i--){
+            document.write(`<h${i}>자바스크립트</h${i}>`);
+        }
+
+        document.write("<hr>");
+        // 순서가 없는 리스트 그려보기
+        // 내용으로는 <li> 안녕 </li> x3
+
+        document.write("<ul>");
+            for(var i = 0; i < 3; i++){
+                document.write("<li>안녕</li>");
+            } document.write("</ul>");
+
+        // 구구단 출력하기
+        // 8 x 1 = 8
+        // 8 x 2 = 16
+        // 8 x 3 = 24
+        // ...
+        // 8 x 9 = 72;
+        var Dan = 8;
+
+        for(var i = 1; i < 10; i++){
+            document.write(Dan,"x", i, "=", Dan*i, "<br>");
+        }
+       
     </script>
 </body>
 </html>
