--- a/js/Array.html
+++ b/js/Array.html
@@ -207,6 +207,44 @@
 
         console.log(newfruits);
 
+        console.log("-----------------")
+
+        // 배열 합치기
+        // 스프레드 연산자를 이용하면 배열을 쉽게 합칠 수 있다.
+        const a = [1, 2];
+        const b = [3, 4];
+        const result = [...a, ...b];
+
+        console.log(result); // [1, 2, 3, 4]
+
+        console.log("-----------------")
+
+        // 함수 인자 전달
+        // 배열의 값을 함수 인자로 “펼쳐서” 전달할 수 있다.
+        const nums = [10, 20, 30];
+        console.log(Math.max(...nums)); // 30
+
+        console.log("-----------------")
+
+        // 변환과 결합
+
+        // 문자열로 결합: join(구분자)이다.
+        // 문자열을 배열로 바꾸려면 문자열의 split을 사용한다
+
+        ['a','b','c'].join('-');    // "a-b-c"다
+        "1,2,3".split(',');         // ["1","2","3"]다
+
+        console.log("-----------------")
+
+        // 다차원 배열
+        // 배열을 요소로 갖는 배열이다.
+
+        const grid = [
+            [1,2],
+            [3,4]
+        ];
+        grid[0][1]; // 2이다
+
     </script>
 </body>
 </html>
