--- a/js/preview.html
+++ b/js/preview.html
@@ -56,6 +56,7 @@
 
         // 3. 최근 검색어 목록 클릭 시 -> 이벤트 위임
         recentList.addEventListener("click",function(event){
+            // 이벤트가 발생한 li
             const target = event.target;
 
             if (target.tagName === "LI"){
