--- a/js/functional_programming.html
+++ b/js/functional_programming.html
@@ -137,6 +137,31 @@
 
         console.log(total);     // 1990000
 
+        // 숫자를 두 배로 만들기
+        const double = x => x * 2;
+
+        // 1을 더하는 함수
+        const increment = x => x + 1;
+
+        // 2를 곱하고 1을 더하는 작업을 하고 싶다면 두 함수를 합성해서 쓸 수 있다.
+        const result = increment(double(5));
+        
+        console.log(result);    // 11
+
+        // 조금 더 일반적인 함수를 만들 수 있다
+        // 함수들을 여러 개 받아서 -> 하나의 함수로 합쳐주는 고차 함수
+        // ...fns -> compose에 넘긴 모든 인자를 배열로 모아서 fns에 넣는다.
+        // reduceRight -> 배열의 오른쪽에서 왼쪽 방향으로 순회하면서 값을
+        // 누적시키는 함수
+
+        const compose = (...fns) => x =>
+            fns.reduceRight((acc,fn) => fn(acc),x);
+
+        const doubleThenIncrement = compose(increment,double);
+
+        console.log(doubleThenIncrement(5));
+
+        
     </script>
 </body>
 </html>
