--- a/js/exam7.html
+++ b/js/exam7.html
@@ -10,6 +10,10 @@
     <button id = "loadPostBtn">게시글 1개 불러오기</button>
     <h2>결과</h2>
     <div id = "result"></div>
+    <hr>
+    <button id = "loadPostBtn">게시글 5개 불러오기</button>
+    <ul id="postList"></ul>
+
     <script>
         // 가상의 서버 역할 -> jsonplaceholder
         // 요청 주소 -> 'https://jsonplaceholder.typicode.com/posts/1'
@@ -21,27 +25,45 @@
         // 내용 : xxx
         // 형태로 출력하기
 
-        const btn = document.getElementById("loadPostBtn");
+        // 버튼을 눌렀을 때 게시글 5개의 제목만 리스트의 li로 넣기
+        // 요청주소 -> https://jsonplaceholder.typicode.com/posts?_limit=5
+
+        const btn1 = document.getElementById("loadPostBtn");
         const resultDiv = document.getElementById("result");
 
-        btn.addEventListener("click", () => {
+        const btn2 = document.querySelectorAll("#loadPostBtn")[1]; 
+        const postList = document.getElementById("postList");
 
-        // jsonplaceholder에게 게시글 1건 요청
+        // 게시글 1개 불러오기
+        btn1.addEventListener("click", () => {
+
         fetch("https://jsonplaceholder.typicode.com/posts/1")
-            .then(res => res.json()) // json() = JSON.parse()
+            .then(res => res.json())
             .then(data => {
-
-                // div 태그에 내용 출력
                 resultDiv.innerHTML = `
                     <div><strong>ID:</strong> ${data.id}</div>
                     <div><strong>제목:</strong> ${data.title}</div>
                     <div><strong>내용:</strong> ${data.body}</div>
                 `;
             })
-            .catch(err => {
-                resultDiv.innerHTML =
-                `<div style="color:red;">에러 발생: ${err}</div>`;
-            });
+        });
+
+        // 게시글 5개 제목만 리스트로 출력
+        btn2.addEventListener("click", () => {
+
+        fetch("https://jsonplaceholder.typicode.com/posts?_limit=5")
+            .then(res => res.json())
+            .then(data => {
+
+                postList.innerHTML = ""; 
+
+                data.forEach(post => {
+                    const li = document.createElement("li");
+                    li.textContent = post.title; 
+                    postList.appendChild(li);
+                });
+
+            })
         });
     </script>
 </body>
